<resources>
    <string name="app_name">Banco-ivpelo</string>
    <string name="hola">hola</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="dni">unkname</string>
    <string name="posici_n_global">Posición Global</string>
    <string name="ingresos">Ingresos</string>
    <string name="transferencias">Transferencias</string>
    <string name="Cambiar_constraseña">Cambiar constraseña</string>
    <string name="Promociones">Promociones</string>
    <string name="Cajeros">Cajeros</string>
    <string name="salir">Salir</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_posicion_global">posicionGlobal</string>
    <string name="balance">Balance :</string>
    <string name="nombre_cuenta">Nombre cuenta :</string>
    <string name="importe">Importe</string>
    <string name="descripcion">Descripcion</string>
    <string name="movimientos">Movimientos</string>
</resources>