<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />


        <TextView
            android:id="@+id/bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPosicionGlobal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/posici_n_global"
            android:drawableLeft="@drawable/baseline_remove_red_eye_24"
             />

        <Button
            android:id="@+id/btnIngresos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ingresos"
            android:drawableLeft="@drawable/baseline_moving_24"
            />


        <Button
            android:id="@+id/btnTransferencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/transferencias"
            android:drawableLeft="@drawable/baseline_transfer_within_a_station_24"
            />

        <Button
            android:id="@+id/btnCambiarContrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Cambiar_constraseña"
            android:drawableLeft="@drawable/baseline_create_24"/>

        <Button
            android:id="@+id/btnPromociones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Promociones"
            android:drawableLeft="@drawable/baseline_shopping_cart_24"
            />

        <Button
            android:id="@+id/btnCajeros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Cajeros"
            android:drawableLeft="@drawable/baseline_map_24"
            />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:drawableLeft="@drawable/baseline_exit_to_app_24"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>